Implement DTO, lambda expression to get DTO object